--- a/public/css/zoo.scss
+++ b/public/css/zoo.scss
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /* -------------modal------------- */
 cite {
   display: block;
@@ -12,8 +11,7 @@ cite a {
 .modal-img {
   margin-left: auto !important;
   margin-right: auto !important;
-  -o-object-fit: contain;
-     object-fit: contain;
+  object-fit: contain;
 }
 
 /* -------------main------------- */
@@ -27,11 +25,8 @@ h2 {
 }
 
 .row {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
   margin: 10px;
 }
 
@@ -58,7 +53,9 @@ h2 {
 }
 
 select {
-  font-family: "Righteous", cursive, "M PLUS Rounded 1c", sans-serif, "游ゴシック Medium", "游ゴシック体", "Yu Gothic Medium", YuGothic, "ヒラギノ角ゴ ProN", "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif !important;
+  font-family: "Righteous", cursive, "M PLUS Rounded 1c", sans-serif, "游ゴシック Medium", "游ゴシック体",
+    "Yu Gothic Medium", YuGothic, "ヒラギノ角ゴ ProN", "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo,
+    "ＭＳ Ｐゴシック", "MS PGothic", sans-serif !important;
 }
 
 .zoo-name-outer {
@@ -69,32 +66,22 @@ select {
 .zoo-name {
   background: #ef5350;
   color: black;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-.zoo-name .name {
-  width: 80%;
-  height: 50px;
-  line-height: 25px;
-  font-size: 18px;
-}
-
-.zoo-name .pref {
-  font-size: 15px;
+  justify-content: space-between;
+  .name {
+    width: 80%;
+    height: 50px;
+    line-height: 25px;
+    font-size: 18px;
+  }
+  .pref {
+    font-size: 15px;
+  }
 }
 
 .parrot-card {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   color: black;
   font-size: 20px;
   border: 3px solid #ef5350;
@@ -108,10 +95,8 @@ p {
 .result-img {
   width: 100px;
   height: 100px;
-  -o-object-fit: cover;
-     object-fit: cover;
-  -o-object-position: 10% 3%;
-     object-position: 10% 3%;
+  object-fit: cover;
+  object-position: 10% 3%;
   margin-top: 6px;
   margin-left: 6px;
 }
@@ -130,21 +115,13 @@ p {
   width: 100%;
   height: 3px;
   background: black;
-  -webkit-transform: scale(0, 1);
-          transform: scale(0, 1);
-  -webkit-transform-origin: right top;
-          transform-origin: right top;
-  -webkit-transition: -webkit-transform 0.3s;
-  transition: -webkit-transform 0.3s;
+  transform: scale(0, 1);
+  transform-origin: right top;
   transition: transform 0.3s;
-  transition: transform 0.3s, -webkit-transform 0.3s;
 }
-
 .parrot-card:hover .result-name::after {
-  -webkit-transform-origin: left top;
-          transform-origin: left top;
-  -webkit-transform: scale(1, 1);
-          transform: scale(1, 1);
+  transform-origin: left top;
+  transform: scale(1, 1);
 }
 
 @media (max-width: 576px) {
@@ -152,4 +129,3 @@ p {
     display: none;
   }
 }
-/*# sourceMappingURL=zoo.css.map */
