--- a/public/css/zoo.scss
+++ b/public/css/zoo.scss
@@ -96,7 +96,7 @@ p {
   width: 100px;
   height: 100px;
   object-fit: cover;
-  object-position: 10% 3%;
+  object-position: top center;
   margin-top: 6px;
   margin-left: 6px;
 }
